force-app/main/default/objects/ProductService__c/ProductService__c.object-meta.xml
<CustomObject>
    <description>Available Product services for products</description>
    <label>Product Service</label>
    <nameField>
        <label>Product Service Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Services</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>