force-app/main/default/objects/ProductService__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description of additional service</description>
    <label>Description</label>
    <length>40</length>
    <type>Text</type>
</CustomField>