force-app/main/default/objects/ProductService__c/fields/Design__c.field-meta.xml
<CustomField>
    <fullName>Design__c</fullName>
    <description>Any specific design to be shown in UI</description>
    <label>Design</label>
    <length>40</length>
    <type>Text</type>
</CustomField>