force-app/main/default/objects/ProductService__c/fields/ExternalId__c.field-meta.xml
<CustomField>
    <fullName>ExternalId__c</fullName>
    <description>External Id Used to Identity Line Item Uniquely</description>
    <label>External Id</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>