force-app/main/default/objects/ProductService__c/fields/FinancialProduct__c.field-meta.xml
<CustomField>
    <fullName>FinancialProduct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to product object</description>
    <label>Financial Product</label>
    <referenceTo>FinancialProduct__c</referenceTo>
    <relationshipLabel>Product Services</relationshipLabel>
    <relationshipName>ProductServices</relationshipName>
    <type>Lookup</type>
</CustomField>