force-app/main/default/objects/ProductService__c/fields/ServiceName__c.field-meta.xml
<CustomField>
    <fullName>ServiceName__c</fullName>
    <description>Name of service offered</description>
    <label>Service Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>