force-app/main/default/objects/ProductService__c/fields/showQuestions__c.field-meta.xml
<CustomField>
    <fullName>showQuestions__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >True if any questions are associated with the service</description>
    <label>showQuestions?</label>
    <type>Checkbox</type>
</CustomField>