force-app/main/default/objects/ProductService__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ServiceName__c</columns>
    <columns>ExternalId__c</columns>
    <columns>FinancialProduct__c</columns>
    <columns>Design__c</columns>
    <columns>Required__c</columns>
    <columns>Order__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>